# freya_flip_clock

./: .gitignore  Cargo.toml  build.rs  conf.txt
src/: app.rs  app_config.rs  app_state.rs  canvas_utils.rs  colors.rs  constant.rs  main.rs  times.rs
src/components/: app_config_context.rs  cursor_icon_context.rs  mod.rs  num.rs  num_group.rs  splitter.rs  tools.rs  window_drag_resize_area.rs
src/components/svg/: close.rs  locked.rs  mod.rs  to_bottom.rs  to_normal.rs  to_top.rs  unclocked.rs
src/hooks/: mod.rs  use_prop.rs
