[package]
name = "flip_clock"
version = "0.1.0"
edition = "2021"

[package.metadata.packager]
before-packaging-command = "cargo build --release" # Before packaging, packager will run this command.
product-name = "My App"                            # By default, the crate name will be shown, but you probably prefer "My App" over "my-app".

[build-dependencies]
winresource = "0.1.7"

[profile.release]
opt-level = "z"
debug = false
lto = true
codegen-units = 1
panic = "abort"
strip = true
incremental = false


[dependencies]
freya = { path = "../../rustLib/freya/crates/freya" }
tokio = { version = "1.37.0", features = ["fs"] }
skia-safe = { version = "0.72.0", features = ["gl", "textlayout", "svg"] }
chrono = "0.4.38"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
